--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "@angular/platform-browser-dynamic": "~13.1.1",
     "@angular/router": "~13.1.1",
     "masonry-layout": "^4.2.2",
-    "ngx-masonry": "^11.0.0",
-    "rxjs": "~6.6.3",
+    "ngx-masonry": "^13.0.0",
+    "ngx-scrollbar": "^9.0.1",
+    "rxjs": "^7.5.2",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
   },
